--- a/style.css
+++ b/style.css
@@ -124,11 +124,27 @@ button {
 
 /* Responsive style for small screen like mobiles */
 @media screen and (max-width: 710px) {
+    .box {
+        width: 100%;
+    }
+
+    .task_info {
+        width: 100%;
+        padding-left: 20px;
+        line-height: 30px;
+    }
+
+    #close {
+        position: absolute;
+        top: 50px;
+    }
+
     .taskActions {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-around;
         flex-direction: column;
         gap: 10px;
+        width: 100%;
     }
 }
 
